--- a/src/angular/datepicker/calendar/calendar-header.html
+++ b/src/angular/datepicker/calendar/calendar-header.html
@@ -9,9 +9,9 @@
     >
       <sbb-icon svgIcon="chevron-small-left-small"></sbb-icon>
     </button>
-    <span class="sbb-calendar-controls-label" [attr.aria-label]="monthText" aria-live="polite"
-      >{{ monthText }}</span
-    >
+    <span class="sbb-calendar-controls-label" [attr.aria-label]="monthText" aria-live="polite">{{
+      monthText
+    }}</span>
     <button
       type="button"
       class="sbb-calendar-controls-button sbb-calendar-controls-button-next"
@@ -32,9 +32,9 @@
     >
       <sbb-icon svgIcon="chevron-small-left-small"></sbb-icon>
     </button>
-    <span class="sbb-calendar-controls-label" [attr.aria-label]="yearText" aria-live="polite"
-      >{{ yearText }}</span
-    >
+    <span class="sbb-calendar-controls-label" [attr.aria-label]="yearText" aria-live="polite">{{
+      yearText
+    }}</span>
     <button
       type="button"
       class="sbb-calendar-controls-button sbb-calendar-controls-button-next"
