--- a/src/angular/menu/menu-item.html
+++ b/src/angular/menu/menu-item.html
@@ -1,4 +1,7 @@
 <ng-content></ng-content>
 @if (_triggersSubmenu) {
-<sbb-icon svgIcon="chevron-small-right-small" class="sbb-menu-item-submenu-trigger-icon"></sbb-icon>
+  <sbb-icon
+    svgIcon="chevron-small-right-small"
+    class="sbb-menu-item-submenu-trigger-icon"
+  ></sbb-icon>
 }
