--- a/src/angular/select/select.html
+++ b/src/angular/select/select.html
@@ -4,26 +4,32 @@
   aria-hidden="true"
   [class.sbb-select-value-empty]="empty"
 >
-  @switch (empty) { @case (true) {
-  <span class="sbb-select-placeholder">{{ !readonly ? placeholder || '\u00A0' : '-' }}</span>
-  } @case (false) {
-  <span class="sbb-select-value-text">
-    <span>{{ triggerValue || '\u00A0' }}</span>
-  </span>
-  } }
+  @switch (empty) {
+    @case (true) {
+      <span class="sbb-select-placeholder">{{ !readonly ? placeholder || '\u00A0' : '-' }}</span>
+    }
+    @case (false) {
+      <span class="sbb-select-value-text">
+        <span>{{ triggerValue || '\u00A0' }}</span>
+      </span>
+    }
+  }
 </div>
 
-@switch (variant | async) { @case ('standard') {
-<sbb-icon
-  class="sbb-icon-scaled sbb-select-arrow-icon"
-  svgIcon="chevron-small-down-small"
-></sbb-icon>
-} @default {
-<sbb-icon
-  class="sbb-icon-scaled sbb-select-arrow-icon sbb-select-arrow-icon-lean"
-  svgIcon="chevron-right-small"
-></sbb-icon>
-} }
+@switch (variant | async) {
+  @case ('standard') {
+    <sbb-icon
+      class="sbb-icon-scaled sbb-select-arrow-icon"
+      svgIcon="chevron-small-down-small"
+    ></sbb-icon>
+  }
+  @default {
+    <sbb-icon
+      class="sbb-icon-scaled sbb-select-arrow-icon sbb-select-arrow-icon-lean"
+      svgIcon="chevron-right-small"
+    ></sbb-icon>
+  }
+}
 
 <ng-template
   cdk-connected-overlay
