--- a/src/components-examples/angular/dialog/shared-data-dialog/shared-data-dialog-example.html
+++ b/src/components-examples/angular/dialog/shared-data-dialog/shared-data-dialog-example.html
@@ -12,6 +12,8 @@
     <button type="button" sbb-secondary-button (click)="openDialog()">Pick one</button>
   </li>
   @if (animal) {
-  <li>You chose: <i>{{ animal }}</i></li>
+    <li>
+      You chose: <i>{{ animal }}</i>
+    </li>
   }
 </ol>
