--- a/src/components-examples/angular/form-field/form-field-dirty-error-state/form-field-dirty-error-state-example.html
+++ b/src/components-examples/angular/form-field/form-field-dirty-error-state/form-field-dirty-error-state-example.html
@@ -10,8 +10,9 @@
     placeholder="Name"
   />
   @if (name.errors?.required) {
-  <sbb-error>Name is required!</sbb-error>
-  } @if (name.errors?.minlength) {
-  <sbb-error>Min length is {{ name.errors?.minlength?.requiredLength }}!</sbb-error>
+    <sbb-error>Name is required!</sbb-error>
+  }
+  @if (name.errors?.minlength) {
+    <sbb-error>Min length is {{ name.errors?.minlength?.requiredLength }}!</sbb-error>
   }
 </sbb-form-field>
