--- a/src/components-examples/angular/lightbox/lightbox/lightbox-example.html
+++ b/src/components-examples/angular/lightbox/lightbox/lightbox-example.html
@@ -6,7 +6,9 @@
   <button sbb-secondary-button (click)="open()">Pick one</button>
 </p>
 @if (animal) {
-<span>You chose: <i>{{ animal }}</i></span>
+  <span
+    >You chose: <i>{{ animal }}</i></span
+  >
 }
 
 <h4>Description</h4>
