--- a/src/components-examples/angular/search/search-historic-railway-pictures/search-historic-railway-pictures-example.html
+++ b/src/components-examples/angular/search/search-historic-railway-pictures/search-historic-railway-pictures-example.html
@@ -3,20 +3,24 @@
 </sbb-search>
 <sbb-autocomplete #auto="sbbAutocomplete">
   @for (option of filteredCities; track option) {
-  <sbb-option [value]="option">{{ option }}</sbb-option>
+    <sbb-option [value]="option">{{ option }}</sbb-option>
   }
 </sbb-autocomplete>
 
 <h4>Search results (only first 10 are shown)</h4>
-@if (!searchResults.length) { No results } @if (showSpinner) {
-<sbb-loading-indicator mode="fullbox"></sbb-loading-indicator>
-} @for (image of searchResults; track image) {
-<span [title]="image.station">
-  <img
-    width="300"
-    [attr.src]="
+@if (!searchResults.length) {
+  No results
+}
+@if (showSpinner) {
+  <sbb-loading-indicator mode="fullbox"></sbb-loading-indicator>
+}
+@for (image of searchResults; track image) {
+  <span [title]="image.station">
+    <img
+      width="300"
+      [attr.src]="
         'https://data.sbb.ch/explore/dataset/historische-bahnhofbilder/files/' + image.id + '/300/'
       "
-  />
-</span>
+    />
+  </span>
 }
