--- a/src/components-examples/angular/tabs/tab-group-async/tab-group-async-example.html
+++ b/src/components-examples/angular/tabs/tab-group-async/tab-group-async-example.html
@@ -1,10 +1,12 @@
-@if ((asyncTabs | async) === null) { Loading tabs... }
+@if ((asyncTabs | async) === null) {
+  Loading tabs...
+}
 
 <sbb-tab-group>
   @for (tab of asyncTabs | async; track tab) {
-  <sbb-tab>
-    <ng-template sbb-tab-label>{{ tab.label }}</ng-template>
-    {{ tab.content }}
-  </sbb-tab>
+    <sbb-tab>
+      <ng-template sbb-tab-label>{{ tab.label }}</ng-template>
+      {{ tab.content }}
+    </sbb-tab>
   }
 </sbb-tab-group>
