--- a/src/components-examples/journey-maps/angular/journey-maps-full/journey-maps-full-example.html
+++ b/src/components-examples/journey-maps/angular/journey-maps-full/journey-maps-full-example.html
@@ -3,30 +3,30 @@
 </sbb-notification>
 <div class="web-map">
   @if (form.get('mapVisible')?.value) {
-  <sbb-journey-maps
-    #advancedMap
-    language="en"
-    [styleOptions]="form.get('styleOptions')?.value"
-    [interactionOptions]="interactionOptions"
-    [listenerOptions]="form.get('listenerOptions')?.value"
-    [uiOptions]="form.get('uiOptions')?.value"
-    [viewportDimensions]="viewportDimensions"
-    [viewportBounds]="form.get('viewportBounds')?.value"
-    [homeButtonOptions]="homeButtonOptions"
-    [apiKey]="apiKey"
-    [markerOptions]="form.get('markerOptions')?.value"
-    [markerDetailsTemplate]="markerDetailsTemplate"
-    [journeyMapsRoutingOption]="journeyMapsRoutingOption"
-    [journeyMapsZones]="form.get('zoneGeoJson')?.value"
-    [poiOptions]="form.get('pointsOfInterestOptions')?.value"
-    [(selectedMarkerId)]="selectedMarkerId"
-    [selectedLevel]="this.form.get('level')?.value"
-    (selectedLevelChange)="this.changeSelectedLevel($event)"
-    (mapCenterChange)="mapCenterChange.next($event)"
-    (mapBoundsChange)="mapBoundingBoxChange.next($event)"
-    (zoomLevelsChange)="zoomLevels = $event"
-    (visibleLevelsChange)="visibleLevels.next($event)"
-  ></sbb-journey-maps>
+    <sbb-journey-maps
+      #advancedMap
+      language="en"
+      [styleOptions]="form.get('styleOptions')?.value"
+      [interactionOptions]="interactionOptions"
+      [listenerOptions]="form.get('listenerOptions')?.value"
+      [uiOptions]="form.get('uiOptions')?.value"
+      [viewportDimensions]="viewportDimensions"
+      [viewportBounds]="form.get('viewportBounds')?.value"
+      [homeButtonOptions]="homeButtonOptions"
+      [apiKey]="apiKey"
+      [markerOptions]="form.get('markerOptions')?.value"
+      [markerDetailsTemplate]="markerDetailsTemplate"
+      [journeyMapsRoutingOption]="journeyMapsRoutingOption"
+      [journeyMapsZones]="form.get('zoneGeoJson')?.value"
+      [poiOptions]="form.get('pointsOfInterestOptions')?.value"
+      [(selectedMarkerId)]="selectedMarkerId"
+      [selectedLevel]="this.form.get('level')?.value"
+      (selectedLevelChange)="this.changeSelectedLevel($event)"
+      (mapCenterChange)="mapCenterChange.next($event)"
+      (mapBoundsChange)="mapBoundingBoxChange.next($event)"
+      (zoomLevelsChange)="zoomLevels = $event"
+      (visibleLevelsChange)="visibleLevels.next($event)"
+    ></sbb-journey-maps>
   }
   <ng-template #markerDetailsTemplate let-marker>
     <div class="markerdetails-title">{{ marker.title }}</div>
@@ -48,8 +48,8 @@
   <form [formGroup]="form">
     <ul>
       <li class="sbb-label">
-        Map move / pan with one finger: {{ interactionOptions.oneFingerPan ?? false ? 'on' : 'off'
-        }}
+        Map move / pan with one finger:
+        {{ interactionOptions.oneFingerPan ?? false ? 'on' : 'off' }}
       </li>
 
       <li class="sbb-label">
@@ -57,15 +57,15 @@
       </li>
 
       <li class="sbb-label">
-        Map center (lng / lat): {{ mapCenterInfo()?.lng | number: '1.1-6' }}, {{
-        mapCenterInfo()?.lat | number: '1.1-6' }}
+        Map center (lng / lat): {{ mapCenterInfo()?.lng | number: '1.1-6' }},
+        {{ mapCenterInfo()?.lat | number: '1.1-6' }}
       </li>
 
       <li class="sbb-label">{{ mapBoundingBoxInfo() }}</li>
 
       <li class="sbb-label">
-        Map zoom (within range {{ zoomLevels?.minZoom }}..{{ zoomLevels?.maxZoom }} ): {{
-        zoomLevels?.currentZoom | number: '1.1-2' }}
+        Map zoom (within range {{ zoomLevels?.minZoom }}..{{ zoomLevels?.maxZoom }} ):
+        {{ zoomLevels?.currentZoom | number: '1.1-2' }}
       </li>
 
       <li>
@@ -95,7 +95,7 @@
           <span class="sbb-label">Rail network color (v2 style only)</span>
           <sbb-select formControlName="railNetworkColor">
             @for (color of railColors; track color) {
-            <sbb-option [value]="color.value">{{ color.label }}</sbb-option>
+              <sbb-option [value]="color.value">{{ color.label }}</sbb-option>
             }
           </sbb-select>
         </div>
@@ -153,9 +153,9 @@
           <span class="sbb-label">Map interaction configuration</span>
           <div class="sbb-checkbox-group-horizontal">
             @for (type of listenerOptionTypes(); track type) {
-            <ng-container [formGroupName]="type">
-              <sbb-checkbox formControlName="watch">{{ type | titlecase }}</sbb-checkbox>
-            </ng-container>
+              <ng-container [formGroupName]="type">
+                <sbb-checkbox formControlName="watch">{{ type | titlecase }}</sbb-checkbox>
+              </ng-container>
             }
           </div>
         </div>
@@ -186,8 +186,9 @@
 
       <li>
         <span class="sbb-label">
-          Map markers @if (selectedMarkerId) {
-          <span> (selected: {{ selectedMarkerId }})</span>
+          Map markers
+          @if (selectedMarkerId) {
+            <span> (selected: {{ selectedMarkerId }})</span>
           }
         </span>
         <button sbb-ghost-button (click)="selectedMarkerId = 'velo'">Basel</button>
@@ -206,15 +207,24 @@
         <sbb-form-field label="POI Environment">
           <sbb-select formControlName="environment">
             @for (environment of ['prod', 'int']; track environment) {
-            <sbb-option [value]="environment">{{ environment }}</sbb-option>
+              <sbb-option [value]="environment">{{ environment }}</sbb-option>
             }
           </sbb-select>
         </sbb-form-field>
         <sbb-form-field label="POI Subcategories">
           <sbb-select multiple formControlName="categories">
-            @for ( category of [ 'park_rail', 'car_sharing', 'p2p_car_sharing', 'bike_parking',
-            'bike_sharing', 'on_demand' ]; track category ) {
-            <sbb-option [value]="category">{{ category }}</sbb-option>
+            @for (
+              category of [
+                'park_rail',
+                'car_sharing',
+                'p2p_car_sharing',
+                'bike_parking',
+                'bike_sharing',
+                'on_demand'
+              ];
+              track category
+            ) {
+              <sbb-option [value]="category">{{ category }}</sbb-option>
             }
           </sbb-select>
         </sbb-form-field>
@@ -225,43 +235,44 @@
         <sbb-form-field label="Select zones">
           <sbb-select formControlName="zoneGeoJson" placeholder="(none)">
             @for (input of journeyMapsZoneOptions; track input) {
-            <sbb-option [value]="input.value">{{ input.label }}</sbb-option>
+              <sbb-option [value]="input.value">{{ input.label }}</sbb-option>
             }
           </sbb-select>
         </sbb-form-field>
         <sbb-form-field label="Select route">
           <sbb-select formControlName="routingGeoJson" placeholder="(none)">
             @for (input of journeyMapsRoutingOptions; track input) {
-            <sbb-option [value]="input.value"> {{ input.label }} </sbb-option>
+              <sbb-option [value]="input.value"> {{ input.label }} </sbb-option>
             }
           </sbb-select>
         </sbb-form-field>
         @if (journeyMapsRoutingLegIds.length) {
-        <sbb-form-field label="Select leg">
-          <sbb-select formControlName="routingLegId" placeholder="(none)">
-            <sbb-option [value]="">(none)</sbb-option>
-            @for (legId of journeyMapsRoutingLegIds; track legId) {
-            <sbb-option [value]="legId"> {{ legId || '(none)' }} </sbb-option>
-            }
-          </sbb-select>
-        </sbb-form-field>
+          <sbb-form-field label="Select leg">
+            <sbb-select formControlName="routingLegId" placeholder="(none)">
+              <sbb-option [value]="">(none)</sbb-option>
+              @for (legId of journeyMapsRoutingLegIds; track legId) {
+                <sbb-option [value]="legId"> {{ legId || '(none)' }} </sbb-option>
+              }
+            </sbb-select>
+          </sbb-form-field>
         }
       </li>
       @if (visibleLevels | async; as visibleLevels) {
-      <li>
-        @if (!visibleLevels.length) {
-        <sbb-notification type="info">No indoor data visible in map </sbb-notification>
-        } @if (visibleLevels.length) {
-        <div>
-          <span class="sbb-label">Select indoor level</span>
-          <sbb-radio-group class="sbb-checkbox-group-horizontal" formControlName="level">
-            @for (level of visibleLevels; track level) {
-            <sbb-radio-button [value]="level">Level {{ level }}</sbb-radio-button>
-            }
-          </sbb-radio-group>
-        </div>
-        }
-      </li>
+        <li>
+          @if (!visibleLevels.length) {
+            <sbb-notification type="info">No indoor data visible in map </sbb-notification>
+          }
+          @if (visibleLevels.length) {
+            <div>
+              <span class="sbb-label">Select indoor level</span>
+              <sbb-radio-group class="sbb-checkbox-group-horizontal" formControlName="level">
+                @for (level of visibleLevels; track level) {
+                  <sbb-radio-button [value]="level">Level {{ level }}</sbb-radio-button>
+                }
+              </sbb-radio-group>
+            </div>
+          }
+        </li>
       }
     </ul>
   </form>
