--- a/src/angular/datepicker/datepicker/datepicker.html
+++ b/src/angular/datepicker/datepicker/datepicker.html
@@ -1,25 +1,26 @@
 @if (prevDayActive) {
-<button
-  type="button"
-  class="sbb-datepicker-arrow-button sbb-datepicker-arrow-button-left sbb-icon-scaled"
-  [attr.aria-label]="prevDayAriaLabel"
-  [disabled]="disabled"
-  (click)="prevDay()"
->
-  <sbb-icon svgIcon="chevron-small-left-small"></sbb-icon>
-</button>
-} @if (toggleVisible) {
-<sbb-datepicker-toggle></sbb-datepicker-toggle>
+  <button
+    type="button"
+    class="sbb-datepicker-arrow-button sbb-datepicker-arrow-button-left sbb-icon-scaled"
+    [attr.aria-label]="prevDayAriaLabel"
+    [disabled]="disabled"
+    (click)="prevDay()"
+  >
+    <sbb-icon svgIcon="chevron-small-left-small"></sbb-icon>
+  </button>
+}
+@if (toggleVisible) {
+  <sbb-datepicker-toggle></sbb-datepicker-toggle>
 }
 <ng-content></ng-content>
 @if (nextDayActive) {
-<button
-  type="button"
-  class="sbb-datepicker-arrow-button sbb-datepicker-arrow-button-right sbb-icon-scaled"
-  [attr.aria-label]="nextDayAriaLabel"
-  [disabled]="disabled"
-  (click)="nextDay()"
->
-  <sbb-icon svgIcon="chevron-small-right-small"></sbb-icon>
-</button>
+  <button
+    type="button"
+    class="sbb-datepicker-arrow-button sbb-datepicker-arrow-button-right sbb-icon-scaled"
+    [attr.aria-label]="nextDayAriaLabel"
+    [disabled]="disabled"
+    (click)="nextDay()"
+  >
+    <sbb-icon svgIcon="chevron-small-right-small"></sbb-icon>
+  </button>
 }
