--- a/src/angular/datepicker/month-view/month-view.html
+++ b/src/angular/datepicker/month-view/month-view.html
@@ -2,24 +2,28 @@
   <thead class="sbb-calendar-table-header">
     <tr>
       @if (showWeekNumbers) {
-      <th>#</th>
-      } @for (day of weekdays; track day) {
-      <th>
-        @switch (isWeekdaySelectable) { @case (true) {
-        <button
-          type="button"
-          tabindex="0"
-          class="sbb-button-reset-frameless sbb-calendar-body-weekday"
-          [attr.aria-label]="day.long"
-          (click)="weekdaySelected(day.index)"
-        >
-          {{ day.narrow }}
-        </button>
-        } @case (false) {
-        <span class="cdk-visually-hidden">{{ day.long }}</span>
-        <span aria-hidden="true">{{ day.narrow }}</span>
-        } }
-      </th>
+        <th>#</th>
+      }
+      @for (day of weekdays; track day) {
+        <th>
+          @switch (isWeekdaySelectable) {
+            @case (true) {
+              <button
+                type="button"
+                tabindex="0"
+                class="sbb-button-reset-frameless sbb-calendar-body-weekday"
+                [attr.aria-label]="day.long"
+                (click)="weekdaySelected(day.index)"
+              >
+                {{ day.narrow }}
+              </button>
+            }
+            @case (false) {
+              <span class="cdk-visually-hidden">{{ day.long }}</span>
+              <span aria-hidden="true">{{ day.narrow }}</span>
+            }
+          }
+        </th>
       }
     </tr>
     <tr>
