--- a/src/angular/file-selector/file-selector.html
+++ b/src/angular/file-selector/file-selector.html
@@ -22,40 +22,49 @@
 </label>
 
 @if (filesList && filesList.length) {
-<ul class="sbb-file-selector-list sbb-clean-list sbb-icon-scaled">
-  @for (file of filesList; track file) {
-  <li>
-    <div role="presentation" class="sbb-file-selector-list-type-icon">
-      @switch (_resolveFileTypeCategory(file)) { @case ('doc') {
-      <sbb-icon svgIcon="document-text-small"></sbb-icon>
-      } @case ('image') {
-      <sbb-icon svgIcon="document-image-small"></sbb-icon>
-      } @case ('pdf') {
-      <sbb-icon svgIcon="document-pdf-small"></sbb-icon>
-      } @case ('audio') {
-      <sbb-icon svgIcon="document-sound-small"></sbb-icon>
-      } @case ('video') {
-      <sbb-icon svgIcon="document-video-small"></sbb-icon>
-      } @case ('zip') {
-      <sbb-icon svgIcon="document-zip-small"></sbb-icon>
-      } @default {
-      <sbb-icon svgIcon="document-standard-small"></sbb-icon>
-      } }
-    </div>
-    <span class="sbb-file-selector-list-desc"
-      >{{ _fileNameNoExtension(file) }} (<span class="sbb-file-selector-list-file-ext"
-        >{{ _fileExtension(file) }}</span
-      >, {{ _fileSizeFormatted(file) }})</span
-    >
-    <button
-      type="button"
-      class="sbb-file-selector-list-remove-icon sbb-button-reset-frameless"
-      (click)="removeFile(file)"
-    >
-      <span class="cdk-visually-hidden">{{ _labelRemoveFile }}</span>
-      <sbb-icon svgIcon="trash-small"></sbb-icon>
-    </button>
-  </li>
-  }
-</ul>
+  <ul class="sbb-file-selector-list sbb-clean-list sbb-icon-scaled">
+    @for (file of filesList; track file) {
+      <li>
+        <div role="presentation" class="sbb-file-selector-list-type-icon">
+          @switch (_resolveFileTypeCategory(file)) {
+            @case ('doc') {
+              <sbb-icon svgIcon="document-text-small"></sbb-icon>
+            }
+            @case ('image') {
+              <sbb-icon svgIcon="document-image-small"></sbb-icon>
+            }
+            @case ('pdf') {
+              <sbb-icon svgIcon="document-pdf-small"></sbb-icon>
+            }
+            @case ('audio') {
+              <sbb-icon svgIcon="document-sound-small"></sbb-icon>
+            }
+            @case ('video') {
+              <sbb-icon svgIcon="document-video-small"></sbb-icon>
+            }
+            @case ('zip') {
+              <sbb-icon svgIcon="document-zip-small"></sbb-icon>
+            }
+            @default {
+              <sbb-icon svgIcon="document-standard-small"></sbb-icon>
+            }
+          }
+        </div>
+        <span class="sbb-file-selector-list-desc"
+          >{{ _fileNameNoExtension(file) }} (<span class="sbb-file-selector-list-file-ext">{{
+            _fileExtension(file)
+          }}</span
+          >, {{ _fileSizeFormatted(file) }})</span
+        >
+        <button
+          type="button"
+          class="sbb-file-selector-list-remove-icon sbb-button-reset-frameless"
+          (click)="removeFile(file)"
+        >
+          <span class="cdk-visually-hidden">{{ _labelRemoveFile }}</span>
+          <sbb-icon svgIcon="trash-small"></sbb-icon>
+        </button>
+      </li>
+    }
+  </ul>
 }
