--- a/src/angular/tabs/tab-group.html
+++ b/src/angular/tabs/tab-group.html
@@ -6,33 +6,35 @@
   (selectFocusedIndex)="selectedIndex = $event"
 >
   @for (tab of _tabs; track tab; let i = $index) {
-  <div
-    class="sbb-tab-label"
-    role="tab"
-    sbbTabLabelWrapper
-    cdkMonitorElementFocus
-    [id]="_getTabLabelId(i)"
-    [attr.tabIndex]="_getTabIndex(tab, i)"
-    [attr.aria-posinset]="i + 1"
-    [attr.aria-setsize]="_tabs.length"
-    [attr.aria-controls]="_getTabContentId(i)"
-    [attr.aria-selected]="selectedIndex == i"
-    [attr.aria-label]="tab.ariaLabel || null"
-    [attr.aria-labelledby]="!tab.ariaLabel && tab.ariaLabelledby ? tab.ariaLabelledby : null"
-    [class.sbb-tab-label-active]="selectedIndex == i"
-    [ngClass]="tab.labelClass"
-    [disabled]="tab.disabled"
-    (click)="_handleClick(tab, tabHeader, i)"
-    (cdkFocusChange)="_tabFocusChanged($event, i)"
-  >
-    <div class="sbb-tab-label-content">
-      <!-- If there is a label template, use it. -->
-      @if (tab.templateLabel) {
-      <ng-template [cdkPortalOutlet]="tab.templateLabel"></ng-template>
-      } @else { {{ tab.textLabel }} }
-      <!-- If there is not a label template, fall back to the text label. -->
+    <div
+      class="sbb-tab-label"
+      role="tab"
+      sbbTabLabelWrapper
+      cdkMonitorElementFocus
+      [id]="_getTabLabelId(i)"
+      [attr.tabIndex]="_getTabIndex(tab, i)"
+      [attr.aria-posinset]="i + 1"
+      [attr.aria-setsize]="_tabs.length"
+      [attr.aria-controls]="_getTabContentId(i)"
+      [attr.aria-selected]="selectedIndex == i"
+      [attr.aria-label]="tab.ariaLabel || null"
+      [attr.aria-labelledby]="!tab.ariaLabel && tab.ariaLabelledby ? tab.ariaLabelledby : null"
+      [class.sbb-tab-label-active]="selectedIndex == i"
+      [ngClass]="tab.labelClass"
+      [disabled]="tab.disabled"
+      (click)="_handleClick(tab, tabHeader, i)"
+      (cdkFocusChange)="_tabFocusChanged($event, i)"
+    >
+      <div class="sbb-tab-label-content">
+        <!-- If there is a label template, use it. -->
+        @if (tab.templateLabel) {
+          <ng-template [cdkPortalOutlet]="tab.templateLabel"></ng-template>
+        } @else {
+          {{ tab.textLabel }}
+        }
+        <!-- If there is not a label template, fall back to the text label. -->
+      </div>
     </div>
-  </div>
   }
 </sbb-tab-header>
 
@@ -42,22 +44,22 @@
   #tabBodyWrapper
 >
   @for (tab of _tabs; track tab; let i = $index) {
-  <sbb-tab-body
-    role="tabpanel"
-    [id]="_getTabContentId(i)"
-    [attr.aria-labelledby]="_getTabLabelId(i)"
-    [attr.aria-hidden]="selectedIndex !== i"
-    [class.sbb-tab-body-active]="selectedIndex == i"
-    [ngClass]="tab.bodyClass"
-    [content]="tab.content!"
-    [position]="tab.position!"
-    [origin]="tab.origin"
-    [animationDuration]="animationDuration"
-    [animationDurationHide]="_animationDurationHide"
-    [preserveContent]="preserveContent"
-    (_onCentered)="_removeTabBodyWrapperHeight()"
-    (_onCentering)="_setTabBodyWrapperHeight($event)"
-  >
-  </sbb-tab-body>
+    <sbb-tab-body
+      role="tabpanel"
+      [id]="_getTabContentId(i)"
+      [attr.aria-labelledby]="_getTabLabelId(i)"
+      [attr.aria-hidden]="selectedIndex !== i"
+      [class.sbb-tab-body-active]="selectedIndex == i"
+      [ngClass]="tab.bodyClass"
+      [content]="tab.content!"
+      [position]="tab.position!"
+      [origin]="tab.origin"
+      [animationDuration]="animationDuration"
+      [animationDurationHide]="_animationDurationHide"
+      [preserveContent]="preserveContent"
+      (_onCentered)="_removeTabBodyWrapperHeight()"
+      (_onCentering)="_setTabBodyWrapperHeight($event)"
+    >
+    </sbb-tab-body>
   }
 </div>
