--- a/src/components-examples/angular/form-field/form-field-group/form-field-group-example.html
+++ b/src/components-examples/angular/form-field/form-field-group/form-field-group-example.html
@@ -9,11 +9,12 @@
       spellcheck="false"
     />
     @if (formGroup.get('name')!.errors?.required) {
-    <sbb-error>Name is required!</sbb-error>
-    } @if (formGroup.get('name')!.errors?.minlength) {
-    <sbb-error
-      >Min length is {{ formGroup.get('name')!.errors?.minlength?.requiredLength }}!</sbb-error
-    >
+      <sbb-error>Name is required!</sbb-error>
+    }
+    @if (formGroup.get('name')!.errors?.minlength) {
+      <sbb-error
+        >Min length is {{ formGroup.get('name')!.errors?.minlength?.requiredLength }}!</sbb-error
+      >
     }
   </sbb-form-field>
   <sbb-form-field label="Date">
@@ -21,13 +22,13 @@
       <input sbbInput sbbDateInput formControlName="date" />
     </sbb-datepicker>
     @if (formGroup.get('date')!.touched && formGroup.get('date')!.errors?.required) {
-    <sbb-error> Date is required! </sbb-error>
+      <sbb-error> Date is required! </sbb-error>
     }
   </sbb-form-field>
   <button sbb-button>Submit</button>
 </form>
 
 @if (lastSubmission) {
-<h3>Last Submission</h3>
-<pre>{{ lastSubmission | json }}</pre>
+  <h3>Last Submission</h3>
+  <pre>{{ lastSubmission | json }}</pre>
 }
