--- a/src/components-examples/journey-maps/esri-plugin/esri-plugin/esri-plugin-example.html
+++ b/src/components-examples/journey-maps/esri-plugin/esri-plugin/esri-plugin-example.html
@@ -1,1 +1,7 @@
-<p>esri-plugin-example works!</p>
+<sbb-notification type="info" class="api-key-info"
+  >This example uses a test API key, that might be disabled at any time.
+</sbb-notification>
+<div class="web-map">
+  <sbb-journey-maps [apiKey]="apiKey" language="en" (mapReady)="map = $event"></sbb-journey-maps>
+  <sbb-esri-plugin [map]="map" [featureLayers]="esriLayerDefinition" />
+</div>
